<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.horaapps.leafpic.activities.SingleMediaActivity"
>
    <item
        android:id="@+id/slide_show"
        android:title="@string/start_slide_show"
        app:showAsAction="never"/>

    <group android:id="@+id/only_photos_options">

        <item
            android:title="@string/editor"
            app:showAsAction="never">
            <menu>
                <item
                    android:id="@+id/action_crop"
                    android:title="@string/crop"
                    app:showAsAction="never"
                    />
                <item
                    android:id="@+id/action_filter"
                    android:title="@string/filter"
                    app:showAsAction="never"
                    />

            </menu>
        </item>
        <item
            android:id="@+id/action_rotate"
            android:orderInCategory="2"
            android:title="@string/rotate"
            app:showAsAction="always">
            <menu>
                <item
                    android:id="@+id/rotate_right_90"
                    android:title="@string/rotate_right_90" />
                <item
                    android:id="@+id/rotate_left_90"
                    android:title="@string/rotate_left_90" />
                <item
                    android:id="@+id/rotate_180"
                    android:title="@string/rotate_180" />
            </menu>
        </item>
        <item
            android:id="@+id/action_palette"
            android:title="@string/palette"
            app:showAsAction="never"
            />
        <item
            android:id="@+id/action_use_as"
            android:title="@string/use_as"
            app:showAsAction="never"
            />
    </group>

    <item
        android:id="@+id/sort_action"
        android:title="@string/sort_menu_title"
        app:showAsAction="never">
        <menu xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              tools:context=".PhotosActivity">
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/name_sort_mode"
                    android:title="@string/name"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/date_taken_sort_mode"
                    android:checked="true"
                    android:title="@string/date"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/size_sort_mode"
                    android:title="@string/size"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/type_sort_action"
                    android:title="@string/type"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/numeric_sort_mode"
                    android:title="@string/numeric"
                    app:showAsAction="never" />
            </group>
            <group android:checkableBehavior="all">
                <item
                    android:id="@+id/ascending_sort_order"
                    android:title="@string/ascending"
                    app:showAsAction="never" />
            </group>
        </menu>
    </item>
    <group android:id="@+id/on_internal_storage">
        <item
            android:id="@+id/action_share"
            android:orderInCategory="0"
            android:title="@string/share"
            app:showAsAction="always"
        />
        <item
            android:id="@+id/action_delete"
            android:orderInCategory="1"
            android:title="@string/delete"
            app:showAsAction="always"
        />
    <item
        android:id="@+id/action_copy"
        android:title="@string/copy_to"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_move"
        android:title="@string/move_to"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_rename"
        android:title="@string/rename"
        app:showAsAction="never"
        />
    </group>

    <item
        android:id="@+id/action_details"
        android:title="@string/details"
        app:showAsAction="never"
        />
    <item
        android:title="@string/more"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/action_edit_with"
                android:title="@string/edit_with"
                app:showAsAction="never" />
            <item
                android:id="@+id/action_open_with"
                android:title="@string/open_with"
                app:showAsAction="never" />
            <item
                android:title="@string/upload"
                android:visible="false"
                app:showAsAction="never" />
            <item
                android:id="@+id/action_settings"
                android:title="@string/settings"
                app:showAsAction="never" />
        </menu>
    </item>
    <!-- End Albums Stuff -->
</menu>