<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".PhotosActivity"
    >
    <!-- TODO:FIX THIS > LIST OR GRID
    <item
        android:id="@+id/action_mode_view"
        android:icon="@mipmap/ic_view_list_white_24dp"
        android:title="modeView"
        app:showAsAction="ifRoom"
        />
    -->
    <item android:id="@+id/filterPhotos"
        android:icon="@mipmap/ic_filter_list_white_24dp"
        android:orderInCategory="1"
        android:title="@string/filter_menu_title"
        app:showAsAction="ifRoom"
        >
        <menu xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            tools:context=".PhotosActivity">
            <group
                android:checkableBehavior="single">
                <item
                    android:id="@+id/all_media_filter"
                    android:title="@string/all"
                    app:showAsAction="ifRoom"
                    />
                <item
                    android:id="@+id/video_media_filter"
                    android:title="@string/videos"
                    app:showAsAction="ifRoom"
                    />
                <item
                    android:id="@+id/image_media_filter"
                    android:title="@string/images"
                    app:showAsAction="ifRoom"
                    />
                <item
                    android:id="@+id/gifs_media_filter"
                    android:title="@string/gifs"
                    app:showAsAction="ifRoom"
                    />
            </group>
        </menu>
    </item>


    <item android:id="@+id/sortPhotos"
        android:icon="@mipmap/ic_sort_white_24dp"
        android:orderInCategory="1"
        android:title="@string/sort_menu_title"
        app:showAsAction="ifRoom"
        >
        <menu xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            tools:context=".PhotosActivity">
            <group  android:checkableBehavior="single">
                <item
                    android:id="@+id/name_sort_action"
                    android:title="@string/name"
                    app:showAsAction="ifRoom"
                    />

                <item
                    android:id="@+id/date_taken_sort_action"
                    android:title="@string/date"
                    app:showAsAction="ifRoom"

                    />
                <item
                    android:id="@+id/size_sort_action"
                    android:title="@string/size"
                    app:showAsAction="ifRoom"
                    />
            </group>
            <group android:checkableBehavior="all">
                <item
                    android:id="@+id/ascending_sort_action"
                    android:title="@string/ascending"
                    app:showAsAction="ifRoom"
                    />
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/sharePhotos"
        android:icon="@mipmap/ic_share_white_24dp"
        android:title="@string/share"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/deleteAction"
        android:icon="@mipmap/ic_delete_white_24dp"
        android:title="@string/menu_delete"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/copyAction"
        android:title="@string/copy_to"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/moveAction"
        android:title="@string/move_to"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/renameAlbum"
        android:title="@string/rename"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/hideAlbumButton"
        android:title="@string/menu_hide"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/excludeAlbumButton"
        android:title="@string/menu_exclude"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/setAsAlbumPreview"
        android:title="@string/set_preview"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/clear_album_preview"
        android:title="@string/clear_preview"
        android:visible="false"
        app:showAsAction="never"
        />

    <item android:id="@+id/select_all_albums_action"
        android:title="@string/select_all"
        app:showAsAction="never"
        />

    <item android:id="@+id/setting"
        android:title="@string/settings"
        app:showAsAction="never"
        />
</menu>