<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:enabled="true" android:checkableBehavior="single">
        <item
                android:id="@+id/name_sort_action"
                android:checked="false"
                android:title="@string/name"
                app:showAsAction="ifRoom"
        />

        <item
                android:id="@+id/date_taken_sort_action"
                android:title="@string/date"
                app:showAsAction="ifRoom"
        />
        <item
                android:id="@+id/size_sort_action"
                android:title="@string/size"
                android:checked="false"
                app:showAsAction="ifRoom"
        />
    </group>
    <group android:checkableBehavior="all">
        <item
                android:id="@+id/ascending_sort_action"
                android:title="@string/ascending"
                android:checked="false"
                app:showAsAction="ifRoom"
        />
    </group>
</menu>