<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="2dp"
        android:id="@+id/password_dialog_card"
        >
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/password_dialog_title"
                    android:layout_width="match_parent"
                    android:textColor="@color/md_dark_primary_text"
                    android:layout_height="wrap_content"
                    android:background="@color/md_dark_appbar"
                    android:padding="24dp"
                    android:text="@string/type_password"
                    android:textSize="18sp"
                    android:textStyle="bold" />
                <LinearLayout
                    android:id="@+id/rl_password_dialog"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="15dp">
                    <EditText
                        android:id="@+id/password_edittxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLength="8"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:hint="@string/password"
                        android:singleLine="true"
                        android:inputType="numberPassword" />
                    <EditText
                        android:id="@+id/confirm_password_edittxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/confirm_password"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:maxLength="8"
                        android:singleLine="true"
                        android:inputType="numberPassword" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </android.support.v7.widget.CardView>
</LinearLayout>